# food-city-Manager

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 20260101000000_create_users.sql  20260101000001_create_menus.sql  20260101000002_create_orders_etc.sql  20260101000003_seed_data.sql  20260101000004_perf_indexes.sql  20260101000005_seed_promos.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/api/: mod.rs
backend/src/api/mw/: auth.rs  mod.rs  rate_limit.rs
backend/src/api/v1/: addresses.rs  admin.rs  auth.rs  cart.rs  disputes.rs  drivers.rs  loyalty.rs  menus.rs  mod.rs  orders.rs  payments.rs  promos.rs  restaurant_dashboard.rs  restaurants.rs  reviews.rs  ws.rs
backend/src/db/: mod.rs  pool.rs
backend/src/db/repos/: address_repo.rs  cart_repo.rs  dispute_repo.rs  driver_repo.rs  loyalty_repo.rs  menu_repo.rs  mod.rs  order_repo.rs  payment_repo.rs  promo_repo.rs  restaurant_repo.rs  review_repo.rs  user_repo.rs
backend/src/domain/: cart.rs  driver.rs  loyalty.rs  menu.rs  mod.rs  order.rs  payment.rs  restaurant.rs  review.rs  user.rs
backend/src/services/: auth_service.rs  cache_service.rs  cart_service.rs  driver_service.rs  menu_service.rs  mod.rs  order_service.rs  payment_service.rs  promo_service.rs  realtime_service.rs  restaurant_service.rs  stripe_client.rs
backend/src/utils/: hash.rs  id.rs  jwt.rs  mod.rs
backend/src/workers/: abandoned_cart_cleanup.rs  driver_match_loop.rs  mod.rs  order_acceptance_timeout.rs  payment_reconciler.rs
backend/tests/: geo_helpers.rs  order_state_machine.rs  user_role.rs
deploy/grafana/: dashboard.json
docs/: API_CONTRACT.md  ARCHITECTURE.md  AUDIT.md  EDGE_CASES.md  PLAN.md  REAL_WORLD_EVALUATION.md  RUNBOOK.md  WORKFLOWS.md
frontend/: .env.example  .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
scripts/: backup-db.sh  restore-db.sh  setup.sh
(+68 files in other folders)
