[package]
name = "food-city-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Food City — restaurant marketplace with delivery (Rust + Axum backend)"
license = "MIT"

[[bin]]
name = "food-city-backend"
path = "src/main.rs"

[lib]
name = "food_city_backend"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "aio"] }
deadpool-redis = "0.18"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "v7", "serde", "fast-rng"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

# HTTP client (Stripe API, geocoding)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utils
once_cell = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"

[profile.dev]
opt-level = 0
debug = false  # speed up dev builds
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 3
